--- a/app/src/main/res/drawable/btn_login.xml
+++ b/app/src/main/res/drawable/btn_login.xml
@@ -3,7 +3,10 @@
 <item>
     <shape android:shape="rectangle">
         <corners android:radius="10dp"/>
-        <gradient android:startColor="@color/teal_200" android:endColor="#D39784"/>
+        <gradient
+            android:startColor="@color/orange"
+            android:endColor="#FA9F6D"
+            android:angle="135"/>
     </shape>
 </item>
 </selector>
