--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,7 +36,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="32dp"
-                    android:text="Hi Hello"
+                    android:text=""
+                    tools:text="@string/hi"
                     android:textColor="@color/red"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -56,16 +57,26 @@
                     app:layout_constraintStart_toStartOf="@+id/textView"
                     app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-                <ImageView
-                    android:id="@+id/avata"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/shapeableImageView"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginEnd="32dp"
-                    android:src="@drawable/profile"
+                    android:src="@color/orange"
                     app:layout_constraintBottom_toBottomOf="@+id/textView2"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textView" />
+                    app:layout_constraintTop_toTopOf="@+id/textView" app:shapeAppearanceOverlay="@style/Theme.Petshop.CircularImageView"/>
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/avatar"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/default_avatar"
+                    app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
+                    app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
+                    app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
+                    app:layout_constraintTop_toTopOf="@+id/shapeableImageView"
+                    app:shapeAppearanceOverlay="@style/Theme.Petshop.CircularImageView"/>
 
                 <EditText
                     android:id="@+id/find"
@@ -235,7 +246,6 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-
         app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -250,9 +260,7 @@
             app:fabCradleMargin="8dp"
             app:fabCradleRoundedCornerRadius="50dp"
             app:fabCradleVerticalOffset="6dp">
-
         </com.google.android.material.bottomappbar.BottomAppBar>
-
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/cart_btn"
@@ -288,7 +296,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="3dp"
                     app:srcCompat="@drawable/bottom_btn1"
-                    app:tint="@color/gray" />
+                    app:tint="?colorAccent" />
 
                 <TextView
                     android:id="@+id/homeTx"
@@ -325,9 +333,6 @@
                     android:textColor="@color/gray"
                     android:textSize="14sp" />
             </LinearLayout>
-
         </LinearLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
