--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,5 +31,16 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!-- ImageView shapes -->
+    <style name="Theme.Petshop.CircularImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">49%</item>
+    </style>
+
+    <style name="Theme.Petshop.RoundedImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">30dp</item>
+    </style>
+
 
 </resources>
