--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="vertical">
+
     <TextView
         android:text="@string/personal_info"
         android:layout_width="match_parent"
@@ -17,11 +22,29 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="20dp"/>
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:src="@drawable/default_avatar"
-        android:layout_marginBottom="20dp"/>
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
+            app:shapeAppearanceOverlay="@style/Theme.Petshop.CircularImageView"
+            android:src="@color/orange"
+            android:layout_marginBottom="20dp"/>
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/avatar"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/default_avatar"
+            app:shapeAppearanceOverlay="@style/Theme.Petshop.CircularImageView"/>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,6 +63,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -65,6 +89,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -91,6 +116,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -116,6 +142,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/dob"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -145,9 +172,11 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:checkedButton="@id/gender_2">
 
             <RadioButton
+                android:id="@+id/gender_0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -156,6 +185,7 @@
                 android:textStyle="bold" />
 
             <RadioButton
+                android:id="@+id/gender_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -164,6 +194,7 @@
                 android:textStyle="bold" />
 
             <RadioButton
+                android:id="@+id/gender_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -190,6 +221,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -200,6 +232,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -210,6 +243,5 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold" />
-
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
