--- a/app/src/main/res/layout/categories_dry_seeds.xml
+++ b/app/src/main/res/layout/categories_dry_seeds.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="DRY SEEDS"
+        android:text="@string/dry_seed"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="20sp"
