--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -55,7 +55,7 @@
             android:background="@drawable/edit_login"
             android:elevation="3dp"
             android:ems="10"
-            android:hint="Email"
+            android:hint="@string/email"
             android:inputType="textPersonName"
             android:textAlignment="center" />
 
@@ -68,7 +68,7 @@
             android:background="@drawable/edit_login"
             android:elevation="3dp"
             android:ems="10"
-            android:hint="Mobile Number"
+            android:hint="@string/number_phone"
             android:inputType="textPersonName"
             android:textAlignment="center" />
 
@@ -81,7 +81,7 @@
             android:layout_marginEnd="50dp"
             android:background="@drawable/edit_login"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:textAlignment="center" />
 
@@ -95,7 +95,7 @@
             android:layout_marginBottom="15dp"
             android:background="@drawable/edit_login"
             android:ems="10"
-            android:hint="Confirm Password"
+            android:hint="@string/password_retype"
             android:inputType="textPassword"
             android:textAlignment="center" />
 
@@ -106,7 +106,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:background="@drawable/btn_login"
-            android:text="Create account"
+            android:text="@string/create_account"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -116,7 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Already have an account? Sign in"
+            android:text="@string/already_account"
             android:textAlignment="center"
             android:textSize="14sp"
             tools:layout_margin="10dp" />
