--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Order and Eat"
+                    android:text="@string/welcome"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -89,7 +89,7 @@
                     android:drawableStart="@drawable/search_back"
                     android:drawablePadding="10dp"
                     android:ems="10"
-                    android:hint="Find Your Food"
+                    android:hint="@string/find"
                     android:inputType="textPersonName"
                     android:minHeight="48dp"
                     android:paddingStart="20dp"
@@ -116,42 +116,30 @@
 
                     <ImageView
                         android:id="@+id/imageView3"
-                        android:layout_width="200dp"
-                        android:layout_height="130dp"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:srcCompat="@drawable/image_banner" />
+                        app:srcCompat="@drawable/banner_2" />
 
                     <TextView
                         android:id="@+id/textView3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:text="Free Delivery"
+                        android:layout_marginTop="32dp"
+                        android:text="@string/banner_text_1"
                         android:textColor="@color/black"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@+id/imageView3"
                         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="May 2 - June 10"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        app:layout_constraintEnd_toEndOf="@+id/textView3"
-                        app:layout_constraintStart_toStartOf="@+id/textView3"
-                        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/textView4"
-                        app:layout_constraintStart_toStartOf="@+id/textView4"
+                        app:layout_constraintEnd_toEndOf="@+id/textView3"
+                        app:layout_constraintStart_toStartOf="@+id/textView3"
                         app:layout_constraintTop_toBottomOf="@+id/textView3">
 
                         <TextView
@@ -162,9 +150,9 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="8dp"
-                            android:text="Buy Now"
+                            android:text="@string/banner_text_2"
                             android:textColor="@color/white"
-                            android:textSize="14sp"
+                            android:textSize="16sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -179,7 +167,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="24dp"
-                    android:text="Categories"
+                    android:text="@string/categories"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -209,7 +197,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="24dp"
-                    android:text="Popular"
+                    android:text="@string/popular"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -296,13 +284,13 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="3dp"
                     app:srcCompat="@drawable/bottom_btn1"
-                    app:tint="?colorAccent" />
+                    app:tint="@color/gray" />
 
                 <TextView
                     android:id="@+id/homeTx"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Home"
+                    android:text="@string/home"
                     android:textAlignment="center"
                     android:textColor="@color/gray"
                     android:textSize="14sp" />
@@ -328,7 +316,7 @@
                     android:id="@+id/profileTx"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Profile"
+                    android:text="@string/Profile"
                     android:textAlignment="center"
                     android:textColor="@color/gray"
                     android:textSize="14sp" />
