--- a/app/src/main/res/layout/categories_pet_treats.xml
+++ b/app/src/main/res/layout/categories_pet_treats.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="PET TREATS"
+        android:text="@string/pet_treats"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="20sp"
