update profile (bug: when user have no profile -> edit opens twice)

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -212,6 +212,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/editBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
