--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -147,6 +148,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:hint="@string/input_dob"
+            android:focusable="false"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
