--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -32,10 +32,10 @@
                 android:id="@+id/recyclerViewCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="vertical"
-                tools:listitem="@layout/cart_view"
-                tools:itemCount="8"/>
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="8"
+                tools:listitem="@layout/cart_view" />
 
             <View
                 android:id="@+id/cover"
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Items Total:"
+            android:text="@string/item_total"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -103,7 +103,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:layout_weight="1"
-            android:text="Shipping fee:"
+            android:text="@string/shipping_fee"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -166,7 +166,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:layout_weight="1"
-            android:text="Total"
+            android:text="@string/total"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold"/>
@@ -189,7 +189,7 @@
         android:layout_margin="16dp"
         android:background="@drawable/orange_bt_background"
         android:gravity="center"
-        android:text="Check Out"
+        android:text="@string/check_out"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"/>
