--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="orange_back">#FF9800</color>
     <color name="orange">#FF5A00</color>
     <color name="red">#FF3D00</color>
+    <color name="red_2">#912909</color>
     <color name="teal_700">#F6DAD0</color>
     <color name="black">#000000</color>
     <color name="gray">#676767</color>
